# ScribeFlow

./: .gitattributes  .gitignore  .impeccable.md  .prettierignore  AGENTS.md  CURRENT-STATE.md  Plugin.md  README.md  eslint.config.js  findings.md  fix_dropdown.mjs  fix_dropdown_bg.mjs  fix_menu.mjs  fix_menu_hover.mjs  fix_menu_padding.mjs  index.html  package-lock.json  package.json  patch_css.mjs  patch_template.js  patch_template.mjs  pdf-host.html  progress.md  task_plan.md  vite.config.js
.codex/: right-dock-smoke-checklist.md
docs/: 2026-04-19-rust-native-editor-feature-recovery.md  2026-04-22-embedpdf-default-switch-phase.md  2026-04-22-embedpdf-headless-migration-plan.md  2026-04-22-runtime-authority-audit.md  2026-04-24-remaining-rust-authority-audit.md  ACADEMIC_PLATFORM_DIRECTION.md  AGENTS.md  AI_CODEX_DESKTOP_REPLICATION.md  AI_CODEX_PHASE1_RUNTIME_AUDIT.md  AI_CODEX_PHASE2_DESKTOP_PARITY_PLAN.md  AI_CODEX_PHASE3_CONTROL_STATE_PLAN.md  AI_CODEX_PHASE4_EXTENSION_MCP_PLAN.md  AI_SYSTEM.md  ARCHITECTURE.md  BUILD_SYSTEM.md  CODEX_CLI_ALIGNMENT_PLAN.md  CODEX_CLI_RUNTIME_REFACTOR.md  CONTRIBUTING.md  DATA_MODEL.md  DOCUMENT_WORKFLOW.md  DOMAINS.md  FRONTEND_SPEC.md  GIT_AND_SNAPSHOTS.md  OPERATIONS.md  PRODUCT.md  REFACTOR_BLUEPRINT.md  RUST_PARITY_TARGET.md  TESTING.md  UI_OS_REDESIGN_BRIEF.md  _MAP.md  ai-system.md  auth-system.md  building.md  editor-system.md  file-system.md  git-system.md  gotchas.md  markdown-system.md  style-guide.md  ui-layout.md  (+2 more)
plan/: 2026-04-15-agent-shell-skill-rearchitecture-plan.md  2026-04-15-ai-workflow-implementation-plan.md  2026-04-16-agent-runtime-refactor.md  2026-04-16-proma-ai-parity-migration-plan.md  2026-04-17-codex-replication-notes.md  2026-04-17-codex-replication-recommendation.md  2026-04-17-codex-replication-task_plan.md  2026-04-17-codex-rust-runtime-replatform-notes.md  2026-04-17-codex-rust-runtime-replatform-plan.md  2026-04-17-codex-rust-runtime-replatform-task_plan.md  2026-04-17-rust-first-runtime-boundary.md  2026-04-18-codex-desktop-replication-master-plan.md  pdf-background-fix-plan.md  proma-ai-parity-notes.md  reference-library-development-checklist.md  task_plan.md
scripts/: agentReviewWorkflow.mjs  build-macos-dmg.mjs  check-ui-bridges.mjs  frontendBaselineTooling.mjs  pdf_translate_formula_guard.py  smoke-tauri-open-workspace.mjs  smoke-tauri-window.mjs  smoke-web-shell.mjs  test_pdf_translate_formula_guard.py  translate_stream.py  version-utils.mjs
src/: App.vue  fix_composer_actions.mjs  (+14 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/altals-editor-core/: Cargo.toml
src-tauri/crates/altals-editor-core/src/: lib.rs
src-tauri/crates/altals-native-editor-app/: Cargo.toml
src-tauri/crates/altals-native-editor-app/src/: main.rs
src-tauri/crates/scribeflow-editor-core/src/: analysis.rs  lib.rs
src-tauri/crates/scribeflow-native-editor-app/src/: main.rs
src-tauri/resources/ai/: anthropicAgentBridge.mjs
src-tauri/resources/extension-host/: extension-host.mjs
src-tauri/resources/i18n/: zh-CN.json
src-tauri/src/: ai_action_catalog.rs  ai_agent_execute.rs  ai_agent_prepare.rs  ai_agent_prompt.rs  ai_agent_run.rs  ai_agent_session_runtime.rs  ai_artifact_runtime.rs  ai_attachment_runtime.rs  ai_client_session_runtime.rs  ai_config.rs  ai_extension_catalog.rs  ai_provider_catalog.rs  ai_provider_credentials.rs  ai_runtime.rs  ai_runtime_session_rail.rs  ai_runtime_thread_client.rs  ai_runtime_turn_wait.rs  ai_session_local_runtime.rs  ai_session_storage.rs  ai_skill_catalog.rs  ai_skill_management.rs  ai_skill_support.rs  ai_skill_text.rs  ai_tool_catalog.rs  ai_turn_intent.rs  ai_turn_policy.rs  ai_turn_router.rs  app_dirs.rs  chat.rs  codex_acp_runtime.rs  codex_cli.rs  document_outline.rs  document_workflow.rs  document_workflow_action.rs  document_workflow_session.rs  document_workflow_ui_state.rs  document_workspace_preview.rs  document_workspace_preview_state.rs  editor_session_runtime.rs  extension_host.rs  (+63 more)
src-tauri/src/codex_runtime/: approvals.rs  events.rs  mod.rs  protocol.rs  providers.rs  state.rs  storage.rs  threads.rs  tools.rs  turns.rs
src-tauri/tests/: parity_smoke.rs
(+800 files in other folders)
