[package]
name = "scribeflow"
version = "1.0.13"
edition = "2021"
default-run = "scribeflow"

[lib]
name = "scribeflow_lib"
crate-type = ["lib", "cdylib"]

[profile.dev]
debug = 1
incremental = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
regex-lite = "0.1"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
dirs = "5"
percent-encoding = "2"
shell-words = "1"
tauri-plugin-clipboard-manager = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
keyring = "3"
url = "2"
lopdf = "0.35"
pdf-extract = "0.7"
hayagriva = { version = "0.9.1", features = ["csl-json"] }
pathdiff = "0.2"
urlencoding = "2"
markdown = "1"
notify = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "webp", "tiff"] }
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSError", "NSURL"] }
sys-locale = "0.3"
window-vibrancy = "0.6"
